[gd_scene load_steps=4 format=3 uid="uid://o62vboyive8"]

[ext_resource type="Script" path="res://scripts/ready.gd" id="1_2jec0"]
[ext_resource type="Texture2D" uid="uid://tmva060tj6h5" path="res://assets/art/UI/UI_ready.png" id="2_clk4x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e4eo1"]
radius = 33.0151

[node name="Ready" type="Area2D"]
visible = false
position = Vector2(1853, 956)
script = ExtResource("1_2jec0")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_clk4x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e4eo1")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_shape_entered" from="." to="." method="_on_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="." to="." method="_on_mouse_shape_exited"]
